@@ -140,3 +140,4 @@ manganosite,Mng,MnO,cr,RH95,NA,15.Aug.20,J,-362900,-385200,59.71,44.1,13.22,60.2
 pyrolusite,NA,MnO2,cr,RH95,NA,15.Aug.20,J,-465000,-520000,52.8,54.76,16.61,290.4,-144.2,20.12,-3787,4.541,0,0,850
 bixbyite,NA,Mn2O3,cr,RH95,NA,15.Aug.20,J,-882100,-959000,113.7,101.81,31.37,162.4,12.11,10.46,-1317,0.3462,0,0,1400
 hausmannite,NA,Mn3O4,cr,RH95,NA,15.Aug.20,J,-1282500,-1384500,164.1,142.02,46.95,-7.432,94.87,-67.12,3396,0,0,0,1400
+manganese,NA,Mn,cr,RH95,NA,15.Aug.20,J,0,0,32.01,26.19,7.354,0,41.345,-2.7217,313.29,-1.3745,0,0,980
