@@ -249,24 +249,24 @@
 "OBIGT",1974,"orpiment","cr","J",,,-1036
 "OBIGT",1982,"dawsonite","cr","J",,,19466
 "OBIGT",1984,"ferberite","cr","J",1.21,,
-"OBIGT",2010,"octadecane","cr","cal",-2.63,,
-"OBIGT",2011,"nonadecane","cr","cal",-13.32,,
-"OBIGT",2012,"eicosane","cr","cal",-2.79,,
-"OBIGT",2013,"heneicosane","cr","cal",-8.61,,
-"OBIGT",2014,"docosane","cr","cal",-2.63,,
-"OBIGT",2015,"tricosane","cr","cal",-5.22,,
-"OBIGT",2016,"tetracosane","cr","cal",-2.02,,
-"OBIGT",2017,"pentacosane","cr","cal",-2.93,,
-"OBIGT",2018,"hexacosane","cr","cal",-1.29,,
-"OBIGT",2019,"heptacosane","cr","cal",-1.23,,
-"OBIGT",2071,"carbazole","cr","cal",-43.39,,
-"OBIGT",2112,"triphenylene","cr","cal",,,541
-"OBIGT",2425,"deoxyadenosine","cr","cal",,,-2977
-"OBIGT",2583,"ethylene","gas","cal",-4.59,,
-"OBIGT",2593,"3,5-dimethylphenol","gas","cal",,,628
-"OBIGT",2903,"nonacontane","liq","cal",,,635
-"OBIGT",2910,"2-methyloctane","liq","cal",10,,
-"OBIGT",3323,"5,6-dithiadecane","liq","cal",2,,
+"OBIGT",2011,"octadecane","cr","cal",-2.63,,
+"OBIGT",2012,"nonadecane","cr","cal",-13.32,,
+"OBIGT",2013,"eicosane","cr","cal",-2.79,,
+"OBIGT",2014,"heneicosane","cr","cal",-8.61,,
+"OBIGT",2015,"docosane","cr","cal",-2.63,,
+"OBIGT",2016,"tricosane","cr","cal",-5.22,,
+"OBIGT",2017,"tetracosane","cr","cal",-2.02,,
+"OBIGT",2018,"pentacosane","cr","cal",-2.93,,
+"OBIGT",2019,"hexacosane","cr","cal",-1.29,,
+"OBIGT",2020,"heptacosane","cr","cal",-1.23,,
+"OBIGT",2072,"carbazole","cr","cal",-43.39,,
+"OBIGT",2113,"triphenylene","cr","cal",,,541
+"OBIGT",2426,"deoxyadenosine","cr","cal",,,-2977
+"OBIGT",2584,"ethylene","gas","cal",-4.59,,
+"OBIGT",2594,"3,5-dimethylphenol","gas","cal",,,628
+"OBIGT",2904,"nonacontane","liq","cal",,,635
+"OBIGT",2911,"2-methyloctane","liq","cal",10,,
+"OBIGT",3324,"5,6-dithiadecane","liq","cal",2,,
 "DEW",8,"AlO2(SiO2)-","aq","cal",,,-897
 "DEW",17,"BO(OH)","aq","cal",,,-1111
 "DEW",19,"Ca(HCO3)+","aq","cal",,,-2971
